<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/outline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/outline_calendar_clock_24"
        android:title="@string/title_booking" />

    <item
        android:id="@+id/navigation_addBooking"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/title_addBooking" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_preference"
        android:icon="@drawable/outline_person_24"
        android:title="@string/title_preference" />

</menu>