<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="comp2000hk.cw2.seasiderestaurant.MainActivity">
    <item
        android:id="@+id/action_setInfo"
        android:orderInCategory="100"
        android:title="@string/personalInfo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_changePassword"
        android:orderInCategory="101"
        android:title="@string/changePw"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="102"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setNotification"
        android:orderInCategory="103"
        android:title="@string/notificationSetup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="104"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>