<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.addBooking.AddBookingFragment">

    <TextView
        android:id="@+id/text_addBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/red_sharp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/input_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border_lightgray"
        android:drawablePadding="8dp"
        android:hint="@string/your_phoneno"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_addBooking" />

    <Spinner
        android:id="@+id/input_meal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border_lightgray"
        android:drawablePadding="8dp"
        android:prompt="@string/desired_meal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_phoneNumber"
        android:inputType="none"
        android:completionThreshold="1"
        android:popupBackground="@color/white"
        android:completionHint="Select Meal"
        android:entries="@array/meal_array">
</Spinner>

    <Spinner
        android:id="@+id/input_seatingArea"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border_lightgray"
        android:drawablePadding="8dp"
        android:prompt="@string/desired_seatingArea"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_meal" />

    <Spinner
        android:id="@+id/input_tableSize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border_lightgray"
        android:drawablePadding="8dp"
        android:prompt="@string/desired_tableSize"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_seatingArea" />

    <TextView
        android:id="@+id/input_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:drawablePadding="8dp"
        android:background="@drawable/border_lightgray"
        android:hint="@string/select_date"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_light"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_tableSize" />

    <Button
        android:id="@+id/btn_addBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/red_sharp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#41ff4800"
        android:shadowDx="8"
        android:shadowDy="8"
        android:text="@string/btnText_addBooking"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_date"
        app:shapeAppearance="@style/ThemeOverlay.Material3.FloatingActionButton.Primary" />

</androidx.constraintlayout.widget.ConstraintLayout>